First cut at rabbitmq-binder
First rough cut of rabbit-binder .. more need ... look for TODOs